# CodeCompass

doc/: usage.md
model/include/model/: file.h
parser/src/: parser.cpp
plugins/cpp/parser/include/cppparser/: cppparser.h
plugins/cpp/parser/src/: clangastvisitor.h  cppparser.cpp
plugins/search/parser/: CMakeLists.txt
plugins/search/parser/include/searchparser/: searchparser.h
plugins/search/parser/src/: ctagsResultParser.cpp  ctagsResultParser.h  searchparser.cpp
plugins/search/service/: CMakeLists.txt
plugins/search/service/include/service/: searchservice.h
plugins/search/service/src/: searchservice.cpp
plugins/search/webgui/js/: searchFields.js
service/project/src/: projectservice.cpp
